--- a/blocks.css
+++ b/blocks.css
@@ -3,7 +3,7 @@
    styling to the original index.htm / start.htm */
 
 body {
-    font-family: "Georgia", Helvetica, Arial, sans-serif;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 /* Here is one of many  CSS rules you will need... */
