--- a/blocks.css
+++ b/blocks.css
@@ -3,11 +3,12 @@
    styling to the original index.htm / start.htm */
 
 body {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+   color: red;
 }
 
 /* Here is one of many  CSS rules you will need... */
 #one {
-    border-color: orange;
-    float: left;
+   border-color: orange;
+   float: left;
 }
