--- a/blocks.css
+++ b/blocks.css
@@ -10,5 +10,5 @@ body {
 /* Here is one of many  CSS rules you will need... */
 #one {
    border-color: orange;
-   float: left;
+   color: blue; 
 }
