--- a/blocks.css
+++ b/blocks.css
@@ -4,12 +4,12 @@
 
 body {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-   color: red;
 }
 
 /* Here is one of many  CSS rules you will need... */
 #one {
-   border-color: orange;
    border-style: solid;
-   color: blue; 
+   border-color: orange;
+   border-width: 5px;
+   float: left;
 }
