--- a/blocks.css
+++ b/blocks.css
@@ -11,5 +11,27 @@ body {
    border-style: solid;
    border-color: orange;
    border-width: 5px;
-   float: left;
+   left: 25%;
+   top: 0%;
+}
+#two {
+   border-style: solid;
+   border-color: green;
+   border-width: 5px;
+   right: 25%;
+   top: 0%;
+}
+#three {
+   border-style: solid;
+   border-color: yellow;
+   border-width: 5px;
+   left: 25%;
+   bottom: 0%;
+}
+#four {
+   border-style: solid;
+   border-color: #3d59c6;
+   border-width: 5px;
+   right: 25%;
+   bottom: 0%;
 }
