--- a/blocks.css
+++ b/blocks.css
@@ -11,6 +11,9 @@ body {
    border-style: solid;
    border-color: orange;
    border-width: 5px;
+   margin: 5px;
+   padding: 5px;
+   position: fixed;
    left: 25%;
    top: 0%;
 }
@@ -18,6 +21,9 @@ body {
    border-style: solid;
    border-color: green;
    border-width: 5px;
+   margin: 5px;
+   padding: 5px;
+   position: fixed;
    right: 25%;
    top: 0%;
 }
@@ -25,6 +31,9 @@ body {
    border-style: solid;
    border-color: yellow;
    border-width: 5px;
+   margin: 5px;
+   padding: 5px;
+   position: fixed;
    left: 25%;
    bottom: 0%;
 }
@@ -32,6 +41,9 @@ body {
    border-style: solid;
    border-color: #3d59c6;
    border-width: 5px;
+   margin: 5px;
+   padding: 5px;
+   position: fixed;
    right: 25%;
    bottom: 0%;
 }
