--- a/blocks.css
+++ b/blocks.css
@@ -53,6 +53,11 @@ body {
 }
 a {
    text-decaration: none;
+   text-align: center;
+   display: inline;
+   background-color: #3d59c6;
+   font-family: helvetica neue,Helvetica,Arial,sans-serif;
+   color: #fefefe;
 }
 #link {
    text-align: center;
