--- a/blocks.css
+++ b/blocks.css
@@ -52,18 +52,21 @@ body {
    width: 25%;
 }
 a {
-   text-decaration: none;
+   text-decoration: none;
    display: inline;
-   text-align: center;
+   margin-left:auto;
+   margin-right:auto;
    background-color: #3d59c6;
    font-family: helvetica neue,Helvetica,Arial,sans-serif;
    color: #fefefe;
 }
-#link {
-   text-decaration: none;
+/* #link {
+   text-decoration: none;
    display: inline;
-   text-align: center;
+   margin-left:auto;
+   margin-right:auto;
    background-color: #3d59c6;
    font-family: helvetica neue,Helvetica,Arial,sans-serif;
    color: #fefefe;
 }
+*/
