--- a/blocks.css
+++ b/blocks.css
@@ -56,6 +56,7 @@ a {
    display: inline;
    margin-left:auto;
    margin-right:auto;
+   text-align: center;
    background-color: #3d59c6;
    font-family: helvetica neue,Helvetica,Arial,sans-serif;
    color: #fefefe;
