--- a/blocks.css
+++ b/blocks.css
@@ -54,8 +54,7 @@ body {
 a {
    text-decoration: none;
    display: inline;
-   margin-left:auto;
-   margin-right:auto;
+   margin: 0 auto;
    text-align: center;
    background-color: #3d59c6;
    font-family: helvetica neue,Helvetica,Arial,sans-serif;
